--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-session": "^2.1.0",
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.18.0",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.9.1"
+    "mysql": "^2.18.1"
   }
 }
