--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,11 @@
       "src": "app.js",
       "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.js"
+    }
   ]
 }
