--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
     "dotenv": "^16.4.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "sqlite3": "^5.1.7"
   }
 }
